minijinja/tests/snapshots/test_parser__parser@filter_block.txt.snap
---
source: minijinja/tests/test_parser.rs
expression: "&ast"
input_file: minijinja/tests/parser-inputs/filter_block.txt

---
Ok(
    Template {
        children: [
            FilterBlock {
                filter: Filter {
                    name: "baz",
                    expr: Some(
                        Filter {
                            name: "bar",
                            expr: Some(
                                Filter {
                                    name: "foo",
                                    expr: None,
                                    args: [],
                                } @ 1:10-1:14,
                            ),
                            args: [
                                Const {
                                    value: 1,
                                } @ 1:18-1:19,
                                Const {
                                    value: 2,
                                } @ 1:21-1:22,
                            ],
                        } @ 1:14-1:24,
                    ),
                    args: [],
                } @ 1:24-1:30,
                body: [
                    EmitRaw {
                        raw: "...",
                    } @ 1:30-1:33,
                ],
            } @ 1:3-1:48,
            EmitRaw {
                raw: "\n",
            } @ 1:48-2:0,
        ],
    } @ 1:0-2:0,
)
