minijinja/tests/snapshots/test_parser__parser@getattr.txt.snap
---
source: minijinja/tests/test_parser.rs
expression: "&ast"
input_file: minijinja/tests/parser-inputs/getattr.txt

---
Ok(
    Template {
        children: [
            EmitExpr {
                expr: GetAttr {
                    expr: GetAttr {
                        expr: Var {
                            id: "foo",
                        } @ 1:3-1:6,
                        name: "bar",
                    } @ 1:6-1:10,
                    name: "baz",
                } @ 1:10-1:14,
            } @ 1:0-1:14,
        ],
    } @ 0:0-1:17,
)
