minijinja/tests/snapshots/test_parser__parser@getitem.txt.snap
---
source: minijinja/tests/test_parser.rs
description: "{{ foo[\"bar\"][42] }}"
input_file: minijinja/tests/parser-inputs/getitem.txt
---
Ok(
    Template {
        children: [
            EmitExpr {
                expr: GetItem {
                    expr: GetItem {
                        expr: Var {
                            id: "foo",
                        } @ 1:3-1:6,
                        subscript_expr: Const {
                            value: 'bar',
                        } @ 1:7-1:12,
                    } @ 1:3-1:13,
                    subscript_expr: Const {
                        value: 42,
                    } @ 1:14-1:16,
                } @ 1:6-1:17,
            } @ 1:0-1:17,
        ],
    } @ 0:0-1:20,
)
