minijinja/tests/snapshots/test_parser__parser@if_cond_else.txt.snap
---
source: minijinja/tests/test_parser.rs
expression: "&ast"
input_file: minijinja/tests/parser-inputs/if_cond_else.txt

---
Ok(
    Template {
        children: [
            IfCond {
                expr: Var {
                    id: "expr1",
                } @ 1:6-1:11,
                true_body: [
                    EmitRaw {
                        raw: "\n    branch 1\n",
                    } @ 1:14-3:0,
                ],
                false_body: [
                    EmitRaw {
                        raw: "\n    else\n",
                    } @ 3:10-5:0,
                ],
            } @ 1:3-5:8,
        ],
    } @ 0:0-5:11,
)
