minijinja/tests/snapshots/test_parser__parser@if_cond_simple.txt.snap
---
source: minijinja/tests/test_parser.rs
expression: "&ast"
input_file: minijinja/tests/parser-inputs/if_cond_simple.txt

---
Ok(
    Template {
        children: [
            IfCond {
                expr: Var {
                    id: "expr1",
                } @ 1:6-1:11,
                true_body: [
                    EmitRaw {
                        raw: "\n    branch 1\n",
                    } @ 1:14-3:0,
                ],
                false_body: [],
            } @ 1:3-3:8,
        ],
    } @ 0:0-3:11,
)
