minijinja/tests/snapshots/test_parser__parser@list.txt.snap
---
source: minijinja/tests/test_parser.rs
description: "{{ [1, 2, foo] }}"
input_file: minijinja/tests/parser-inputs/list.txt
---
Ok(
    Template {
        children: [
            EmitExpr {
                expr: List {
                    items: [
                        Const {
                            value: 1,
                        } @ 1:4-1:5,
                        Const {
                            value: 2,
                        } @ 1:7-1:8,
                        Var {
                            id: "foo",
                        } @ 1:10-1:13,
                    ],
                } @ 1:3-1:14,
            } @ 1:0-1:14,
        ],
    } @ 0:0-1:17,
)
