minijinja/tests/snapshots/test_parser__parser@map.txt.snap
---
source: minijinja/tests/test_parser.rs
description: "{{ {\"foo\": \"bar\"} }}"
input_file: minijinja/tests/parser-inputs/map.txt
---
Ok(
    Template {
        children: [
            EmitExpr {
                expr: Map {
                    keys: [
                        Const {
                            value: 'foo',
                        } @ 1:4-1:9,
                    ],
                    values: [
                        Const {
                            value: 'bar',
                        } @ 1:11-1:16,
                    ],
                } @ 1:3-1:17,
            } @ 1:0-1:17,
        ],
    } @ 0:0-1:20,
)
