minijinja/tests/snapshots/test_parser__parser@max-recursion-expr.txt.snap
---
source: minijinja/tests/test_parser.rs
description: "{{ (((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((((( 52 + 23 )))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))) }}"
input_file: minijinja/tests/parser-inputs/max-recursion-expr.txt
---
Err(
    Error {
        kind: SyntaxError,
        detail: "template exceeds maximum recusion limits",
        name: "max-recursion-expr.txt",
        line: 1,
    },
)
